--- a/platformio.ini
+++ b/platformio.ini
@@ -15,6 +15,6 @@ framework = arduino
 lib_deps = 
 	paulstoffregen/OneWire@^2.3.6
 	thomasfredericks/Bounce2@^2.71
-	matmunk/DS18B20@^1.0.0
 	adafruit/Adafruit GFX Library@^1.11.0
 	adafruit/Adafruit SH110X@^2.1.6
+	olikraus/U8g2@^2.33.8
